<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Review Submission</string>
    <string name="productDescription">Reliable and Efficient\n\n7.5 cu. ft. colossal capacity — Colossal-size stainless steel drum can take on everything the washer sends its way\nSteamRefresh — Refreshes fabrics, removes wrinkles and odors and rejuvenates clothes\nSteam Dewrinkle — Removes wrinkles and refreshes clean clothes\nReverse tumble — By reversing the rotation of the drum, you can expect gentle, fast, even drying\nDuoDry™ System — Quickly and consistently dries all types of clothes\nSpecialty Dry Cycles — Provide just the right levels of drying for better fabric care</string>
    <string name="productTitle">GE Profile" 30" 7.5 Cu. Ft. Colossal Capacity Electric Dryer</string>
    <string name="rateButton">Rate</string>
    <string name="submitButton">Submit</string>
    <string name="titleHint">Title</string>
    <string name="nicknameHint">Nickname</string>
    <string name="reviewHint">Type a review...</string>
    <string name="thankYou">Thank You!</string>
    

</resources>