<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background2"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#D0003c45" >

        <View
            android:id="@+id/View1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/drop_shadow_down" />

        <ViewAnimator
            android:id="@+id/thankYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/thankYou"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true" />

        </ViewAnimator>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/fore"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/reviewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleHint"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/reviewNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nicknameHint"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/bvRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="3.0"
                    android:stepSize="1.0" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" >

                    <ImageView
                        android:id="@+id/reviewPhoto"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        android:src="@drawable/graphic_photo_box" />

                    <ScrollView
                        android:id="@+id/scrollView2"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="5"
                        android:background="@drawable/scroll_back" >

                        <TextView
                            android:id="@+id/reviewText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reviewHint"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </ScrollView>

                </LinearLayout>

            </LinearLayout>
    </LinearLayout>

</LinearLayout>