<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background2"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#D0003c45" >

        <View
            android:id="@+id/View1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/drop_shadow_down" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/spacer"
                android:layout_width="fill_parent"
                android:layout_height="20dp" >

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/fore"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/productTitle"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/thumbImage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:src="@drawable/graphic_photo_box" />

                        <RelativeLayout
                            android:id="@+id/ratingStars"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="5" >

                            <RatingBar
                                android:id="@+id/ratingBar"
                                style="@style/bvRatingBar"
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:numStars="5"
                                android:rating="3.0"
                                android:stepSize="1.0" />
                        </RelativeLayout>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/titleField"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/titleHint"
                        android:inputType="textCapSentences"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/nicknameField"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/nicknameHint"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/reviewField"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:gravity="center_vertical|top"
                        android:hint="@string/reviewHint"
                        android:inputType="textMultiLine"
                        android:minLines="4" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp" >

                        <Button
                            android:id="@+id/submitButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_vertical|center_horizontal|right"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:text="@string/submitButton"
                            android:textAppearance="?android:attr/textAppearanceMediumInverse"
                            android:textColor="#00ab8e" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/bottomSpace"
                android:layout_width="wrap_content"
                android:layout_height="0dp" 
                android:layout_weight="1"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>